Cleaned some extra lines of code and comments

--- a/Genetic Algorithm for Classifier Feature Selection - GIT/Genetic Algorithm for Classifier Feature Selection - GIT .ipynb
+++ b/Genetic Algorithm for Classifier Feature Selection - GIT/Genetic Algorithm for Classifier Feature Selection - GIT .ipynb
@@ -29,7 +29,6 @@
     "import numpy as np\n",
     "r.seed(100)\n",
     "\n",
-    "\n",
     "pd.set_option('display.max_rows', 1000)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
@@ -49,20 +48,8 @@
     "from collections import Counter\n",
     "from sklearn.model_selection import RepeatedKFold\n",
     "from sklearn.metrics import accuracy_score\n",
-    "#from xgboost import XGBClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "#\n",
-    "#from sklearn.feature_selection import RFE\n",
-    "#from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier, ExtraTreesClassifier, VotingClassifier\n",
-    "#from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "\n",
-    "#from sklearn.neighbors import KNeighborsClassifier\n",
-    "#from sklearn.tree import DecisionTreeClassifier\n",
-    "#from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "#from sklearn.naive_bayes import GaussianNB\n",
-    "#from sklearn.naive_bayes import MultinomialNB"
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -73,30 +60,15 @@
    "source": [
     "\n",
     "from sklearn.model_selection import StratifiedKFold, learning_curve, GridSearchCV, cross_val_score\n",
-    "#from sklearn.cross_validation import train_test_split\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics \n",
-    "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "#from sklearn.preprocessing import StandardScaler\n",
-    "#from sklearn.pipeline  import Pipeline\n",
     "from sklearn.metrics import classification_report  \n",
     "from sklearn.metrics import confusion_matrix   \n",
-    "#from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "import re\n",
     "from time import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from sklearn.preprocessing import StandardScaler\n",
-    "#from sklearn.preprocessing import Normalizer"
    ]
   },
   {
@@ -1156,7 +1128,7 @@
    ],
    "source": [
     "#dataset head\n",
-    "df.head(5)\n"
+    "df.head(5)"
    ]
   },
   {
@@ -1393,16 +1365,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##will remove all columns with high number of missing values\n",
-    "#df.drop([\"race\",\"weight\",\"payer_code\",\"medical_specialty\",\"diag_1\",\"diag_2\",\"diag_3\"], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -1427,7 +1389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#will fill out features with missing values with 0 as a separeate state\n",
+    "#will fill out features with missing values with 0 as separeate states\n",
     "df.fillna(\"0\", inplace= True)"
    ]
   },
@@ -1833,16 +1795,6 @@
    "source": [
     "64#get all column names of type int\n",
     "listInt64= list(df.select_dtypes(['int64']).columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#print(listObject)"
    ]
   },
   {
@@ -2255,8 +2207,7 @@
    "source": [
     "##encoding all categorical variables\n",
     "le = LabelEncoder()\n",
-    "df_encoded = dfObject.apply(le.fit_transform)\n",
-    " "
+    "df_encoded = dfObject.apply(le.fit_transform)"
    ]
   },
   {
@@ -2571,13 +2522,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -2595,13 +2539,6 @@
     "#check the shape \n",
     "print(df.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -26029,23 +25966,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2044, 3978, 4365, 5587, 6206, 6424, 6930, 8172, 12314, 13163, 14407, 17533, 18109, 18342, 18747, 19417, 20941, 21186, 21618, 22530, 22610, 22844, 22865, 23599, 23966, 24945, 25017, 25191, 25334, 26008, 27622, 27634, 28286, 28879, 29016, 31158, 31483, 32721, 33039, 33888, 34334, 35620, 36312, 37381, 38235, 38889, 41301, 41537, 42908, 45116, 45282, 45341, 46604, 53271, 55967, 56499, 60775, 61290, 62088, 62110, 62113, 63764, 64385, 65204, 66869, 69769, 69814, 70547, 71508, 72525, 73917, 74309, 74325, 77057, 77273, 77282, 77506, 77619, 78108, 78115, 78494, 79152, 79178, 79406, 80441, 82180, 82269, 83143, 83437, 84827, 85789, 86244, 89256, 90804, 91754, 92929, 93456, 94464, 94795, 95578, 96205, 96475, 99920, 101163, 101755, 6298, 25837, 34004, 42304, 70466, 2576, 6437, 15821, 16836, 17532, 18943, 20674, 20944, 21580, 22041, 22349, 22579, 26622, 27366, 28874, 30774, 31485, 36188, 36836, 37678, 39310, 39681, 40418, 40755, 40853, 40917, 42776, 44378, 45213, 47282, 50046, 51185, 55279, 55556, 56006, 60051, 60282, 60334, 62585, 63031, 64059, 64323, 64896, 65046, 66402, 68078, 68619, 69667, 69718, 69901, 70458, 70552, 73376, 74804, 76861, 77181, 80029, 80722, 80802, 81772, 82801, 83236, 83842, 87989, 89044, 89482, 90290, 90299, 91894, 93656, 93852, 96555, 97666, 98013, 99187, 100772, 100950, 101443, 6363, 20008, 22059, 25242, 33251, 38411, 39196, 45243, 48006, 53113, 54637, 58111, 58364, 61175, 62857, 66121, 66732, 67566, 69376, 70196, 71149, 71336, 77737, 77740, 77997, 79649, 80562, 82958, 86533, 86734, 87072, 88372, 91002, 97607, 97714, 5019, 7426, 9287, 11497, 12969, 14332, 14817, 14893, 17173, 18372, 18600, 19421, 20308, 21899, 22317, 22620, 22642, 22970, 23390, 23401, 23639, 24991, 25039, 25457, 25586, 26820, 27131, 27358, 27983, 28131, 28252, 28394, 28449, 28542, 29038, 29610, 29683, 29898, 29935, 30286, 30332, 30497, 30516, 31319, 32283, 32855, 33368, 33374, 33409, 33478, 33731, 34510, 34896, 35026, 35247, 35688, 35880, 36301, 37539, 38046, 38066, 38780, 38858, 40032, 40133, 40412, 40612, 43252, 44556, 44608, 44692, 44802, 45328, 45559, 47024, 49237, 49386, 50081, 50398, 50544, 51460, 51964, 53339, 53643, 54079, 54822, 55309, 55571, 55996, 56112, 56127, 56335, 57001, 57329, 57461, 57670, 57723, 57905, 58281, 58747, 59271, 59506, 61189, 61848, 62141, 62812, 64731, 64960, 65170, 65891, 66924, 67028, 67086, 67101, 67809, 67878, 67994, 68279, 68785, 68980, 69227, 69322, 69397, 69795, 70100, 70276, 70379, 71008, 71064, 71288, 71323, 71433, 71773, 71866, 72136, 72337, 72370, 73001, 73440, 73500, 74283, 74887, 75334, 75644, 76033, 76427, 77386, 77525, 77956, 78599, 78777, 79080, 79136, 79511, 79746, 80107, 80275, 80417, 81649, 82260, 82326, 82656, 82689, 83914, 84072, 84456, 85136, 85467, 85810, 87515, 87622, 88326, 88883, 89120, 89882, 90418, 90893, 91500, 92031, 93415, 94134, 94225, 95088, 95115, 95237, 95317, 95452, 95935, 96112, 96810, 97321, 97638, 97990, 98787, 99757, 100386, 100730, 100826, 35061, 36901, 39694, 41951, 45691, 46087, 46491, 47824, 50303, 52926, 53342, 54799, 54828, 59453, 62853, 63515, 64289, 67550, 70174, 71716, 72979, 74441, 76627, 79766, 79951, 80018, 86053, 86988, 91171, 91298, 92736, 95854, 97579, 98042, 7270, 9466, 17121, 37747, 38996, 80809, 61963, 91489, 1224, 14972, 19034, 19353, 21150, 24792, 31196, 32699, 32709, 35673, 37015, 46548, 52346, 61234, 62502, 66117, 72746, 77052, 85157, 96599, 98667, 101096, 56153, 59603, 61215, 70955, 75447, 82905, 95987, 9011, 11858, 17043, 17125]\n"
-     ]
-    }
-   ],
-   "source": [
-    " print(List_Outliers_to_drop)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
@@ -26122,8 +26042,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "#defining various steps required for the genetic algorithm\n",
     "#generates the initial population\n",
     "def gen_inital_pop(population_size : int, numb_feat: int):\n",
@@ -26143,6 +26061,7 @@
     "        model.fit(X_train.iloc[:,chromosome],y_train)\n",
     "        predictions = model.predict(X_test.iloc[:,chromosome])\n",
     "        scores.append(accuracy_score(y_test,predictions))\n",
+    "        #implementation for RepeatedKFold\n",
     "        #cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
     "        #cross_score = cross_val_score(model, X_train.iloc[:,chromosome], y_train, scoring='accuracy', cv=cv, n_jobs=-1)\n",
     "        #mean_scores = np.mean(cross_score)\n",
@@ -26211,9 +26130,7 @@
     "    best = feat[0]\n",
     "    offspring_population[len(offspring_population)-1] = best\n",
     "    score1, feat = fitness_score(offspring_population, X_train, y_train,model)\n",
-    "    #print(offspring_population)\n",
-    "    return offspring_population\n",
-    "\n"
+    "    return offspring_population\n"
    ]
   },
   {
@@ -26226,15 +26143,13 @@
     "    list_best_score =[]\n",
     "    list_average_score = []\n",
     "    list_worst_score =[]\n",
-    "    #print('{:<8s}{:<8}{:>8s}{:>8s}'.format(\"GEN\",\"BEST\",\"AVERAGE\",\"MIN\"))\n",
     "    print('{:<8s}{:<8}'.format(\"GEN\",\"SCORE\"))\n",
     "    current_population = gen_inital_pop(population_size, num_feat)\n",
     "    for x in range(generation_size):    \n",
     "        fitnessScores_, features =  fitness_score(current_population,X_train,y_train,model) \n",
-    "        #print(\"{:<8d}{:<8.2f}{:>7.2f}{:>10.2f}\".format(x+1,np.max(fitnessScores_),np.average(fitnessScores_),np.min(fitnessScores_)))\n",
     "        print(\"{:<8d}{:<8.4f}\".format(x+1,np.max(fitnessScores_)))\n",
     "    \n",
-    "    #for plotting\n",
+    "        #for plotting\n",
     "        list_best_score.append(np.max(fitnessScores_))\n",
     "        list_average_score.append(np.average(fitnessScores_))\n",
     "        list_worst_score.append(np.min(fitnessScores_))\n",
@@ -26253,14 +26168,11 @@
     "    # Plot best, average and worst\n",
     "    import matplotlib.pyplot as plt\n",
     "    plt.plot(list_best_score)\n",
-    "    #plt.plot(list_average_score)\n",
-    "    #plt.plot(list_worst_score)\n",
     "    plt.xlabel('Generation')\n",
     "    plt.ylabel('Fitness Value')\n",
     "    plt.show()\n",
     "  \n",
     "    best_score, best_features =  fitness_score(current_population,X_train,y_train,model) \n",
-    "   \n",
     "    return best_score, best_features"
    ]
   },
@@ -26275,7 +26187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1. Splitting the data into feature / target matrices "
+    "### 5.1. Splitting the data into feature / target matrices / data scaling"
    ]
   },
   {
@@ -26986,20 +26898,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27310,7 +27208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3.2 Model evaluation after implementing GA"
+    "### 5.3.5 Model evaluation after implementing GA"
    ]
   },
   {
@@ -27694,7 +27592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.4.2 Model evaluation after implementing GA"
+    "### 5.4.5 Model evaluation after implementing GA"
    ]
   },
   {
